--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.10+1
+  gradient_borders: ^1.0.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
