--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
   dio: ^5.4.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.4
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.10+1
   gradient_borders: ^1.0.0
