--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.10+1
+  get_it: ^7.6.7
   gradient_borders: ^1.0.0
   intl: ^0.19.0
 
