--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/Blink.png"
+  image_path: "assets/images/icon_blink.png"
   min_sdk_android: 21  
 
 # For information on the generic Dart part of this file, see the
